entrypoint/Pages/Index.cshtml.css
.recipe-list-container {
    width: 100%;
}

.recipe-list-item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap-reverse;
}

.recipe-list-text {
    min-width: 300px;
}

.recipe-list-chip-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
}

.recipe-list-chip {
    font-size: small;
    margin: var(--extra-small);
    padding: var(--extra-small);
    height: fit-content;
    border-radius: var(--border-radius);
    border: 2px solid var(--bg-color-darkest);
    background-color: var(--bg-color-darker);
}

